fix: build issue with toList (only on Java 16+).
Problem: Used .toList() method which is only available in Java 16+, but project targets Java 11.

  Solution: Replaced .toList() with .collect(Collectors.toList()) and added Collectors import.